synced html files with app

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,6 +5,7 @@
 		<title>Information service</title>
 	</head>
 	<body>
-		<h1>Welcome to CONNECT</h1>
+		<h1>Welcome to Uninfo</h1>
+		<p>Use service from <a href="/dashboard">MEDIA PORTAL</a></p>
 	</body>
 </html>
