--- a/app/templates/Dashboard.html
+++ b/app/templates/Dashboard.html
@@ -15,9 +15,11 @@
 			<div>
 				<p>Publish New info</p>
 				<form>
-					<input name="title" type="text" placeholder="Title/Headline" required/>
-					<input name="content" type="textarea" placeholder="Share your information"/>
-					<input name="image" type="file" placeholder="Upload image/file" accept=".jpeg, .png, .pdf, .jpg, .xls, .docx, .docs, .mp4, .mp3, .webp," multiple>
+					<input name="title" type="text" placeholder="Title/Headline" required><br>
+					<textarea name="content" placeholder="Share your information" required></textarea><br>
+					<input name="image" type="file" placeholder="Upload image/file" accept=".jpeg, .png, .pdf, .jpg, .xls, .docx, .docs, .mp4, .mp3, .webp," multiple><br>
+					<button type="submit">Post</button>
+				</form>
 			</div>
 			<div>
 				<p>Delete info</p>
