--- a/app/templates/Dashboard.html
+++ b/app/templates/Dashboard.html
@@ -16,8 +16,8 @@
 			<div>
 				<p>Publish New Info</p>
 				<form action="{{ url_for('dashboard') }}" method="POST" enctype="multipart/form-data">
-					<input name="title" type="text" placeholder="Title/Headline" required><br>
-					<textarea name="content" placeholder="Share your information" required></textarea><br>
+					<input style="padding: 12px; margin: 10px; border: 0px 0px 2px 0px; font-family: cursive;" name="title" type="text" placeholder="Title/Headline" required><br>
+					<textarea style="height:300px; width: 400px; font-family: cursive;" name="content" placeholder="Share your information" required></textarea><br>
 					<!--		<input name="image" type="file" placeholder="Upload image/file" accept=".jpeg, .png, .pdf, .jpg, .xls, .docx, .docs, .mp4, .mp3, .webp," multiple><br> -->
 					<label for="image">Upload Image: </label>
 					<input type="file" name="image" accept="image/*">
@@ -36,11 +36,12 @@
 				<img src="{{ post.image_url }}" alt="Post Image" style="max-width: 200px;">
 				{% endif %}
 
-				{% if document_url %}
+				{% if post.document_url %}
 				<p><a href="{{ post.document_url }}">Download Document</a></p>
 				{% endif %}
 
 				<form action="{{url_for('dashboard') }}" method="POST">
+					<input type="hidden" name="delete_post_id" value="{{ post.id }}">
 					<button type="submit", class="btn btn-danger">Delete</button>
 				</form>																			
 			</div>
