--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<meta Encoding='UTF-8'>
-		<title>Information service</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Uninfo- Feeds</title>
 	</head>
 	<body>
-		<h1>Welcome to Uninfo</h1>
-		<p>Use service from <a href="/dashboard">MEDIA PORTAL</a></p>
+		<h1>Latest</h1>
+		{% for n in news %}
+		<div class="post-preview">
+			<h2>{{ n.title }}</h2>
+			<p>{{ n.content[:200] }}...</p>
+
+			{% if n.image_url %}
+			<img src="{{ post.image_url }}" alt="Post Image" style="max-width: 200px;">
+			{% endif %}
+
+			{% if n.document_url %}
+			<p><a href="{{ post.document_url }}">Download Document</a></p>
+			{% endif %}                                               
+		</div>
+		{% endfor %}
+
+		<h1>Events</h1>
+		{% for e in events %}
+		<div class="Events-preview">
+			<h2>{{ e.title }}</h2>
+			<p>{{ e.content[:100] }}...</p>
+
+			{% if e.image_url %}
+			<img src="{{ e.image_url }}" alt="Post Image" style="max-width: 200px;">
+			{% endif %}                                              
+		</div>
+		{% endfor %}
+
 	</body>
 </html>
