--- a/app/templates/Dashboard.html
+++ b/app/templates/Dashboard.html
@@ -22,10 +22,10 @@
 					<textarea name="content" placeholder="Share your information" required></textarea><br>
 					<!--		<input name="image" type="file" placeholder="Upload image/file" accept=".jpeg, .png, .pdf, .jpg, .xls, .docx, .docs, .mp4, .mp3, .webp," multiple><br> -->
 					<label for="image">Upload Image: </label>
-					<input type="file" name="image" accept="image/*">
+					<input type="file" name="images" accept="image/*">
 
 					<label for="document">Upload Document: </label>
-					<input type="file" name="document" accept=".pdf,.xlsx,.xls">
+					<input type="file" name="documents" accept=".pdf,.xlsx,.xls">
 					<button type="submit">Publish Post</button>
 				</form>
 			</div>
