--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -3,35 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <meta  name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>GETINFO</title>
+        <title>Media Signup</title>
     </head>
-    </head>
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Kampus Konnect</h1>
-        <p>Your Source for University News</p>
-    </header>
-    <nav>
-	    <a href="login">Media</a>
-        <a href="#news">News</a>
-        <a href="#events">Events</a>
-        <a href="#contact">Contact</a>
-    </nav>
     <body>
-	<p>Go back to<a href="/">Feeds</a></p>
-        <h1>Media Admin Page</h1>
-        <p>SIGNUP</p>
-        <form action="#" method="post"><br>
-            <input type="email"  placeholder="Email" name="email" required><br>
-            <input type="text" placeholder="Name" name="name" required><br>
-	    <input type="text" placeholder="Username" name="username" required><br>
-            <input type="password" placeholder="password" name="password" required><br>
-	    <!--  <input type="" placeholder="Authorization" required><br> -->
-            <button type="submit">signup</button><br>
-        </form>
-       <p>Go back to<a href="login"> Login Page</a></p>
+        <header>
+            <h1>Become a Media Admin, user</h1>
+            <a href="/">Feeds</a>
+        </header>
+        <div>
+            <h1>Media Admin Page</h1>
+            <p>SIGNUP</p>
+            <form action="#" method="post">
+                <input type="email"  placeholder="Email" name="email" required>
+                <input type="text" placeholder="Name" name="name" required>
+                <input type="text" placeholder="Username" name="username" required>
+                <input type="password" placeholder="password" name="password" required>
+            <!--  <input type="" placeholder="Authorization" required><br> -->
+                <button type="submit">signup</button>
+            </form>
+        <p>Go back to<a href="login"> Login Page</a></p>
+        </div>
     </body>
 </html>
