--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,29 +10,24 @@
     </head>
     <body>
         <header>
-            <h1>Kampus Konnect</h1>
-            <p>Your Source for University News</p>
+            <h1>Welcome to the Admin boarding panel, user</h1>
+            <a href="/">Feeds</a>
         </header>
-        <nav>
-            <a href="#news">News</a>
-            <a href="#events">Events</a>
-            <a href="#contact">Contact</a>
-        </nav>
-	    <p>Go back to<a href="/">Feeds</a></p>
-        {% with messages = get_flashed_messages() %}
+        <!-- {% with messages = get_flashed_messages() %}
             {% if messages %}
                 {% for msg in messages %}
                     <p>{{msg}}</p>
                 {% endfor %}
             {% endif %}
-        {% endwith %}
+        {% endwith %} -->
         <h1>Media Admin Page</h1>
         <p>Login</p>
         <form action="#" method="post">
-            <input type="text" placeholder="Userame" name="username" required> <br>
-            <input type="password" placeholder="password" name="password" required> <br>
-            <button type="submit">Login</button> <br>
+            <input type="text" placeholder="Userame" name="username" required>
+            <input type="password" placeholder="password" name="password" required>
+            <button type="submit">Login</button>
         </form>
+        <a href="reset_password">Forgot password?</a>
         <a href="signup">New here? signup</a>
     </body>
 </html>
