Add password reset functionality with email token generation

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,9 +5,6 @@
         <meta  name="viewport" content="width=device-width, initial-scale=1.0">
         <title>GETINFO</title>
     </head>
-    </head>
-    <body>
-    </head>
     <body>
         <header>
             <h1>Welcome to the Admin boarding panel, user</h1>
@@ -27,7 +24,7 @@
             <input type="password" placeholder="password" name="password" required>
             <button type="submit">Login</button>
         </form>
-        <a href="reset_password">Forgot password?</a>
+        <a href="forgot_pass">Forgot password?</a>
         <a href="signup">New here? signup</a>
     </body>
 </html>
